# tisane-code-gen

./: README.md  pyproject.toml
tests/: NOTES.md  helpers.py  test_codeGenerator.py  test_statisticalmodel_construction.py
tests/generated_scripts/: model.R
tests/input_json/: main_interaction.json
tests/key_scripts/: main_only.R
tests/output_scripts/: main_only.R
tisaneCodeGenerator/: codeGenerator.py  strings.json
