[tool.poetry]
name = "tisanecodegenerator"
version = "0.1.3"
description = "Code generator for Tisane"
license = "Apache License 2.0" 
authors = ["Eunice Jun <eunice.m.jun@gmail.com>"]

repository = "https://github.com/emjun/rtisane"
homepage = "tisane-stats.org"

# README file(s) are used as the package description
readme = ["README.md"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.pytest.ini_options]
pythonpath=[
    "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
